tests/salesforce/force-app/main/default/objects/Kysoql_Record__c/Kysoql_Record__c.object-meta.xml
<CustomObject>
  <description>Fixture object used by kysoql integration and schema-generation tests.</description>
  <label>Kysoql Record</label>
  <nameField>
    <label>Kysoql Record Name</label>
    <type>Text</type>
  </nameField>
  <pluralLabel>Kysoql Records</pluralLabel>
  <sharingModel>ReadWrite</sharingModel>
</CustomObject>