tests/salesforce/force-app/main/default/objects/Kysoql_Record__c/fields/Account__c.field-meta.xml
<CustomField>
  <fullName>Account__c</fullName>
  <deleteConstraint>SetNull</deleteConstraint>
  <label>Account</label>
  <referenceTo>Account</referenceTo>
  <relationshipLabel>Kysoql Records</relationshipLabel>
  <relationshipName>Kysoql_Records</relationshipName>
  <type>Lookup</type>
</CustomField>