tests/salesforce/force-app/main/default/objects/Kysoql_Record__c/fields/Active__c.field-meta.xml
<CustomField>
  <fullName>Active__c</fullName>
  <defaultValue>false</defaultValue>
  <label>Active</label>
  <type>Checkbox</type>
</CustomField>