tests/salesforce/force-app/main/default/objects/Kysoql_Record__c/fields/External_Id__c.field-meta.xml
<CustomField>
  <fullName>External_Id__c</fullName>
  <externalId>true</externalId>
  <label>External ID</label>
  <length>80</length>
  <required>true</required>
  <type>Text</type>
  <unique>true</unique>
</CustomField>